--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html>
 <head>
-<script src="monstermash.js"></script>
+
 <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 
-	
+		<div class="monsterCard">
+			
 
+
+		</div>
+
+	<form onclick="Javascript:drawPart('full')" name="drawPart"> <!--returns "object is not a function"....I hate not using jQuery/Angular for DOM manipulations..-->
+		<button type="button" name="drawPartButton">Draw Part</button>
+	</form>
+
+<script src="monstermash.js"></script>
+<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </body>
 </html>
